--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
             line-height: 1.6;
             color: #333;
             background-color: #f5f5f5;
+            padding: 20px;
         }
 
         .container {
             max-width: 1400px;
             margin: 0 auto;
-            padding: 20px;
+            overflow-x: auto;
         }
 
         h1 {
@@ -45,11 +46,6 @@
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             overflow: hidden;
-        }
-        @media screen and (width <= 960px) {
-          #map-container {
-            width: 200%;
-          }
         }
 
         #map-container svg {
@@ -122,22 +118,36 @@
         }
 
         @media (max-width: 768px) {
+            body {
+              padding: 10px;
+              padding-right: 0;
+            }
             h1 {
                 font-size: 2em;
             }
-
             .container {
-                padding: 10px;
+                width: 100%;
+                position: relative;
+            }
+            header {
+              position: sticky;
+              top: 0;
+              left: 0;
+            }
+            #map-container {
+              width: 200%;
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
+      <header>
         <h1>Fulham Cemetery Trees</h1>
         <div class="intro">
             <p>Aerial photo from Google Maps, with trees highlighted on mouseover or tap.</p>
         </div>
+      </header>
 
         <div id="map-container">
 
