Added list of trees that highlight markers on hover or tap

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         }
 
         #map-container {
+          position: relative;
             width: 100%;
             aspect-ratio: 1280 / 677;
             background: url('fulhamcemetery-aerial-photo.jpg') no-repeat;
@@ -95,7 +96,6 @@
         svg g.highlight > text {
             opacity: 1;
         }
-        svg g:hover > text:hover { pointer-events: none; }
 
         /* Style for tree shapes when visible */
         svg g:hover > circle,
@@ -142,6 +142,31 @@
               width: 200%;
             }
         }
+        .toc {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          width: 200px;
+          bottom: 10px;
+          overflow: auto;
+          background: rgba(0,0,0,0.5);
+          border: 1px solid #fff;
+        }
+        .toc ul {
+          list-style: none;
+          padding: 0;
+          margin: 10px 0;
+        }
+        .toc li {
+          padding: 2px 10px;
+          margin: 0;
+          font-size: 12px;
+          color: #fff;
+        }
+        .toc li:hover {
+          background: rgba(0,0,0,0.5);
+          cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -154,6 +179,48 @@
       </header>
 
         <div id="map-container">
+
+          <div class="toc">
+            <ul>
+              <li class="ailanthus">Ailanthus</li>
+              <li class="ash">Ash</li>
+              <li class="cedar">Cedar</li>
+              <li class="cherry">Cherry</li>
+              <li class="crabapple">Crabapple</li>
+              <li class="cypress">Cypress</li>
+              <li class="elder">Elder</li>
+              <li class="hawthorn">Hawthorn</li>
+              <li class="himalayan-cedar">Himalayan cedar</li>
+              <li class="holm-oak">Holm oak</li>
+              <li class="hornbeam">Hornbeam</li>
+              <li class="horse-chestnut">Horse chestnut</li>
+              <li class="japanese-cherry">Japanese cherry</li>
+              <li class="snowball-bushes">Japanese snowball bushes</li>
+              <li class="juniper">Juniper</li>
+              <li class="lime-limes">Lime</li>
+              <li class="london-plane">London Plane</li>
+              <li class="magnolia">Magnolia</li>
+              <li class="maple">Maple</li>
+              <li class="medlar">Medlar</li>
+              <li class="norway">Norway maple 'Schwedleri'</li>
+              <li class="oak">Oak</li>
+              <li class="pine-pines">Pine</li>
+              <li class="poplars">Poplars</li>
+              <li class="purple-plum">Purple plum</li>
+              <li class="redwood">Redwood</li>
+              <li class="rowan">Rowan</li>
+              <li class="birch">Silver birch</li>
+              <li class="maple">Silver maple</li>
+              <li class="sweetgum-liquidambar">Sweetgum / Liquidambar</li>
+              <li class="sycamore-sycamores">Sycamore</li>
+              <li class="weeping-ash">Weeping ash</li>
+              <li class="wild-plum">Wild plum</li>
+              <li class="winter">Winter flowering cherry</li>
+              <li class="yew">Yew</li>
+              <li class="zelkova-serrata">Zelkova serrata</li>
+            </ul>
+
+          </div>
 
           <svg id="map" width="1280" height="677" viewBox="0 0 1280 677" fill="none" xmlns="http://www.w3.org/2000/svg">
           <rect width="1280" height="677" fill="white"/>
@@ -372,7 +439,7 @@
           </g>
           <g id="Crabapple floribunda">
           <circle id="Crabapple floribunda (gone)" opacity="0.5" cx="775.5" cy="158.5" r="11.5" fill="#D9D9D9"/>
-          <text id="Crabapple floribunda (gone)_2" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="722.309" y="162.132">Crabapple (gone)</tspan></text>
+          <text id="Crabapple floribunda (gone)_2" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="722.309" y="162.132">Crabapple floribunda (gone)</tspan></text>
           </g>
           <g id="Japanese cherry Tai Haku_2">
           <circle id="Japanese cherry &#39;Tai Haku&#39;_2" opacity="0.5" cx="988.5" cy="283.5" r="13.5" fill="#D9D9D9"/>
@@ -463,11 +530,11 @@
           <circle id="Cypress_29" opacity="0.5" cx="494" cy="182" r="10" fill="#D9D9D9"/>
           <text id="Cypress_30" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="479.266" y="185.132">Cypress</tspan></text>
           </g>
-          <g id="Cypress_31">
+          <g id="Pine_3">
           <circle id="Cypress_32" opacity="0.5" cx="577" cy="171" r="10" fill="#D9D9D9"/>
           <text id="Pine" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="569.363" y="174.132">Pine</tspan></text>
           </g>
-          <g id="Cypress_33">
+          <g id="Pine_4">
           <circle id="Cypress_34" opacity="0.5" cx="553" cy="174" r="10" fill="#D9D9D9"/>
           <text id="Pine_2" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="545.363" y="177.132">Pine</tspan></text>
           </g>
@@ -506,11 +573,11 @@
           </g>
           <g id="Limes_22">
           <path id="Limes_23" opacity="0.5" d="M714.5 137.54C719.194 137.54 723 141.346 723 146.04C723 150.735 719.194 154.54 714.5 154.54C709.806 154.54 706 150.735 706 146.04C706 141.346 709.806 137.54 714.5 137.54ZM731.5 134.54C736.194 134.54 740 138.346 740 143.04C740 147.735 736.194 151.54 731.5 151.54C726.806 151.54 723 147.735 723 143.04C723 138.346 726.806 134.54 731.5 134.54ZM748.5 131.54C753.194 131.54 757 135.346 757 140.04C757 144.735 753.194 148.54 748.5 148.54C743.806 148.54 740 144.735 740 140.04C740 135.346 743.806 131.54 748.5 131.54ZM765.5 128.54C770.194 128.54 774 132.346 774 137.04C774 141.735 770.194 145.54 765.5 145.54C760.806 145.54 757 141.735 757 137.04C757 132.346 760.806 128.54 765.5 128.54ZM782.5 126.54C787.194 126.54 791 130.346 791 135.04C791 139.735 787.194 143.54 782.5 143.54C777.806 143.54 774 139.735 774 135.04C774 130.346 777.806 126.54 782.5 126.54ZM800.5 123.54C805.194 123.54 809 127.346 809 132.04C809 136.735 805.194 140.54 800.5 140.54C795.806 140.54 792 136.735 792 132.04C792 127.346 795.806 123.54 800.5 123.54ZM818.5 120.54C823.194 120.54 827 124.346 827 129.04C827 133.735 823.194 137.54 818.5 137.54C813.806 137.54 810 133.735 810 129.04C810 124.346 813.806 120.54 818.5 120.54ZM835.5 118.54C840.194 118.54 844 122.346 844 127.04C844 131.735 840.194 135.54 835.5 135.54C830.806 135.54 827 131.735 827 127.04C827 122.346 830.806 118.54 835.5 118.54ZM853.5 117.54C858.194 117.54 862 121.346 862 126.04C862 130.735 858.194 134.54 853.5 134.54C848.806 134.54 845 130.735 845 126.04C845 121.346 848.806 117.54 853.5 117.54ZM886.5 113C891.194 113 895 116.806 895 121.5C895 126.195 891.194 130 886.5 130C883.178 130 880.302 128.093 878.904 125.315C878.289 129.404 874.761 132.54 870.5 132.54C865.806 132.54 862 128.735 862 124.04C862 119.346 865.806 115.54 870.5 115.54C873.822 115.54 876.696 117.446 878.095 120.224C878.71 116.135 882.239 113 886.5 113Z" fill="#D9D9D9"/>
-          <text id="Limes_24" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="789.105" y="137.132">Limes</tspan></text>          
-          </g>
-            <g id="Yew_3">
+          <text id="Limes_24" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="789.105" y="137.132">Limes</tspan></text>
+          <g id="Yew_3">
           <circle id="Yew_4" opacity="0.5" cx="837.5" cy="138.5" r="9.5" fill="#D9D9D9"/>
           <text id="Limes_25" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="829.312" y="142.132">Yew</tspan></text>
+          </g>
           </g>
           <g id="Cherry_7">
           <circle id="Cherry_8" opacity="0.5" cx="225.5" cy="254.5" r="13.5" fill="#D9D9D9"/>
@@ -524,10 +591,10 @@
           <circle id="Japanese cherry &#39;Kanzan&#39;_5" opacity="0.5" cx="283.5" cy="244.5" r="11.5" fill="#D9D9D9"/>
           <circle id="Japanese cherry &#39;Kanzan&#39;_6" opacity="0.5" cx="390.5" cy="225.5" r="7.5" fill="#D9D9D9"/>
           <text id="Limes_26" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="344.223" y="232.132">Japanese cherry &#39;Kanzan&#39;</tspan></text>
-          </g>
-            <g id="Cypress_35">
+          <g id="Cypress_35">
           <circle id="Cypress_36" opacity="0.5" cx="399" cy="202" r="10" fill="#D9D9D9"/>
           <text id="Cypress_37" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="384.266" y="205.132">Cypress</tspan></text>
+          </g>
           </g>
           <g id="Sycamores">
           <path id="Sycamores_2" opacity="0.5" d="M262.5 372C274.374 372 284 381.626 284 393.5C284 405.374 274.374 415 262.5 415C250.626 415 241 405.374 241 393.5C241 381.626 250.626 372 262.5 372ZM238.5 332C250.374 332 260 341.626 260 353.5C260 365.374 250.374 375 238.5 375C226.626 375 217 365.374 217 353.5C217 341.626 226.626 332 238.5 332Z" fill="#D9D9D9"/>
@@ -587,6 +654,78 @@ svg.addEventListener('pointermove', (e) => {
 // Clear highlight when finger lifts or gesture cancels
 svg.addEventListener('pointerup', clearHighlight);
 svg.addEventListener('pointercancel', clearHighlight);
+
+</script>
+
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  const tocItems = document.querySelectorAll('.toc li');
+  const map = document.getElementById('map');
+  if (!map || !tocItems.length) return;
+
+  const groups = Array.from(map.querySelectorAll('g'));
+  let activeLi = null; // li selected by tap/click
+
+  // Helper: split into lowercase words using space, hyphen or underscore
+  function getWords(str) {
+    if (!str) return [];
+    return str
+      .toLowerCase()
+      .split(/[\s\-_]+/)
+      .filter(Boolean);
+  }
+
+  // Precompute word sets for each <g>
+  const groupWordMap = new Map();
+  groups.forEach(g => {
+    const id = g.id || '';
+    groupWordMap.set(g, new Set(getWords(id)));
+  });
+
+  function clearHighlights() {
+    groups.forEach(g => g.classList.remove('highlight'));
+  }
+
+  function highlightForLi(li) {
+    const liWords = new Set(getWords(li.className));
+    if (!liWords.size) {
+      clearHighlights();
+      return;
+    }
+
+    clearHighlights();
+
+    groups.forEach(g => {
+      const gWords = groupWordMap.get(g);
+      for (const w of liWords) {
+        if (gWords.has(w)) {
+          g.classList.add('highlight');
+          break;
+        }
+      }
+    });
+  }
+
+  tocItems.forEach(li => {
+    // Hover (desktop)
+    li.addEventListener('mouseenter', () => {
+      highlightForLi(li);
+    });
+
+    // Always clear on mouseleave — ignoring taps
+    li.addEventListener('mouseleave', () => {
+      clearHighlights();
+      activeLi = null; // also clear "tapped" state
+    });
+
+    // Tap / click (mobile & desktop)
+    li.addEventListener('click', (e) => {
+      e.preventDefault();
+      activeLi = li;
+      highlightForLi(li);
+    });
+  });
+});
 
 </script>
 
