Improve TOC scrollbar, some text tweaks

--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
           bottom: 10px;
           overflow: auto;
           background: rgba(0,0,0,0.5);
-          border: 1px solid #fff;
+          border: 1px solid rgba(255,255,255,0.7);
+          border-radius: 4px;
+          scrollbar-color: grey transparent;
+          scrollbar-width: thin;
         }
         .toc ul {
           list-style: none;
@@ -183,7 +186,7 @@
 
           <div class="toc">
             <ul>
-              <li tabindex="0" class="ailanthus">Ailanthus</li>
+              <li tabindex="0" class="ailanthus">Ailanthus (Tree of Heaven)</li>
               <li tabindex="0" class="ash">Ash</li>
               <li tabindex="0" class="beech">Beech</li>
               <li tabindex="0" class="birch">Birch</li>
@@ -212,15 +215,15 @@
               <li tabindex="0" class="medlar">Medlar</li>
               <li tabindex="0" class="norwaymaple">Norway maple 'Schwedleri'</li>
               <li tabindex="0" class="oak">Oak</li>
-              <li tabindex="0" class="pine-pines">Pine</li>
+              <li tabindex="0" class="pine pines">Pine</li>
               <li tabindex="0" class="plum">Plum</li>
               <li tabindex="0" class="poplars">Poplars</li>
               <li tabindex="0" class="purpleplum">Purple plum</li>
               <li tabindex="0" class="redwood">Redwood</li>
               <li tabindex="0" class="rowan">Rowan</li>
-              <li tabindex="0" class="scarletcrabapple">Scarletcrabapple</li>
+              <li tabindex="0" class="scarletcrabapple">Scarlet crabapple</li>
               <li tabindex="0" class="silvermaple">Silver maple</li>
-              <li tabindex="0" class="sweetgum liquidambar">Sweetgum / Liquidambar</li>
+              <li tabindex="0" class="sweetgum liquidambar">Sweetgum (Liquidambar)</li>
               <li tabindex="0" class="sycamore sycamores">Sycamore</li>
               <li tabindex="0" class="weepingash">Weeping ash</li>
               <li tabindex="0" class="wildplum">Wild plum</li>
