Added ginkgo to TOC

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
               <li tabindex="0" class="crabapple">Crabapple</li>
               <li tabindex="0" class="cypress">Cypress</li>
               <li tabindex="0" class="elder">Elder</li>
+              <li tabindex="0" class="ginkgo">Ginkgo</li>
               <li tabindex="0" class="europeancrabapple">European crabapple</li>
               <li tabindex="0" class="hallcrabapple">Hall crabapple</li>
               <li tabindex="0" class="hawthorn">Hawthorn</li>
