--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           <path id="Union" opacity="0.5" d="M649.5 231C658.06 231 665 237.94 665 246.5C665 255.06 658.06 262 649.5 262C646.404 262 643.52 261.092 641.1 259.528C638.287 263.447 633.692 266 628.5 266C624.806 266 621.415 264.707 618.752 262.55C615.732 265.896 611.362 268 606.5 268C601.698 268 597.377 265.948 594.361 262.675C591.692 268.193 586.041 272 579.5 272C574.405 272 569.849 269.69 566.822 266.061C564.047 270.809 558.897 274 553 274C544.163 274 537 266.837 537 258C537 249.163 544.163 242 553 242C557.816 242 562.135 244.128 565.068 247.495C567.885 242.428 573.292 239 579.5 239C584.301 239 588.622 241.051 591.638 244.324C594.307 238.806 599.959 235 606.5 235C610.823 235 614.756 236.663 617.698 239.384C620.49 236.671 624.3 235 628.5 235C631.596 235 634.479 235.907 636.899 237.471C639.712 233.552 644.308 231 649.5 231Z" fill="#D9D9D9"/>
           <text id="Limes_4" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="596.262" y="253.132">Ash</tspan></text>
           </g>
-          <g id="maple">
+          <g id="Sycamore">
           <circle id="Silver birch_3" opacity="0.5" cx="643.5" cy="273.5" r="12.5" fill="#D9D9D9"/>
           <text id="Sycamore" fill="black" xml:space="preserve" style="white-space: pre" font-family="Nunito" font-size="8" font-weight="bold" letter-spacing="0em"><tspan x="625.363" y="277.132">Sycamore</tspan></text>
           </g>
